memos/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  labels:
    app: memos
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5230
      targetPort: 5230
      nodePort: 30030
      name: http
  selector:
    app: memos
